Add basics for setup for the app-server component and some basic styles

--- a/ng-complete-guide/src/app/app.component.html
+++ b/ng-complete-guide/src/app/app.component.html
@@ -1,3 +1,10 @@
-<h1 class="text-3xl font-bold underline">
-  I'm in the AppComponent
-</h1>
+<div class='p-8 text-base leading-7 space-y-6 text-gray-600 divide-y divide-gray-300/50'>
+  <header>
+    <h1 class='text-3xl font-bold'>
+      I'm in the AppComponent
+    </h1>
+  </header>
+  <div id='app-server' class='pt-3'>
+    <app-server></app-server>
+  </div>
+</div>
